test > database > add unit test for blank df and select some columns

--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import os, re,json, imp, unittest\n",
@@ -23,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "local_library = True\n",
@@ -53,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "print(da_tran_SQL.__doc__)"
@@ -107,6 +113,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -120,6 +132,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -279,6 +298,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -292,6 +317,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -444,6 +476,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -457,6 +495,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -613,6 +658,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -625,6 +676,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "\n",
@@ -783,6 +841,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -795,6 +859,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "\n",
@@ -949,6 +1020,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -961,6 +1038,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "\n",
@@ -1129,6 +1213,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -1141,6 +1231,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "\n",
@@ -1299,6 +1396,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -1311,6 +1414,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "\n",
@@ -1450,6 +1560,12 @@
     "        expect_df = self.df1\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_read_sql_columns(self):\n",
+    "        df_read = self.sql.read(self.table_name, columns_list = ['col1','col2'])\n",
+    "        expect_df = self.df1[['col1','col2']]\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_whole(self):\n",
     "        self.sql.dump_whole(self.df2, self.table_name)\n",
@@ -1463,6 +1579,13 @@
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1'])\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = pd.DataFrame({'col1' : [1,2,3,4,5,6,7,8] , 'col2' : [1,1,2,3,3,4,4,5] , 'col3' : [1,1,1,2,2,2,2,2]})\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace_blank(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2.head(0) , table_name_in = self.table_name, list_key = ['col1'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.copy()\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
     "        \n",
@@ -1558,7 +1681,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": []
   }
