--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     "# Import Library\n",
-    " - ```pip install google-cloud-storage```<br>\n",
-    " - ```Not sure if I include all yet```<br> "
+    " - ```pip install google```<br>\n",
+    " - ```pip install google-cloud-storage```<br> "
    ]
   },
   {
@@ -100,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
