Add Sample about new function

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Import Library\n",
-    " - ```pip install google```<br>\n",
+    "\n",
     " - ```pip install google-cloud-storage```<br> "
    ]
   },
@@ -95,6 +95,26 @@
    "source": [
     "gcs.upload(bucket_file = '{Destination + File name you want to upload}'\n",
     "           , local_file = '{Your local file}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09237d10",
+   "metadata": {},
+   "source": [
+    "# Upload Folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae7c510a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcs.upload_folder(bucket_folder = '{Destination folder you want to upload}'\n",
+    "                  , local_folder = '{Your local Folder}'\n",
+    "                  , remove_file = False) # <= If true, remove file from that folder "
    ]
   }
  ],
