--- a/samples/other_function.ipynb
+++ b/samples/other_function.ipynb
@@ -181,11 +181,55 @@
     "from py_topping.general_use import check_utc\n",
     "check_utc(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd86456",
+   "metadata": {},
+   "source": [
+    "## healthcheck\n",
+    "\n",
+    "Just return dict of your machine status, include\n",
+    " - machine's name\n",
+    " - machine's ip\n",
+    " - cpu use\n",
+    " - ram use\n",
+    " - rom use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "41e34d50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hostname': [''],\n",
+       " 'hostip': [''],\n",
+       " 'cpu_use': [0.8],\n",
+       " 'ram_use': [63.8],\n",
+       " 'rom_use': [23.4]}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from py_topping.general_use import healthcheck\n",
+    "\n",
+    "health = healthcheck()\n",
+    "health['hostname'], health['hostip'] = [''] , [''] # delete my machine name\n",
+    "health"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
