--- a/samples/run_pipeline.ipynb
+++ b/samples/run_pipeline.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For my Safety reason, load setting file"
+    "# Load setting from Text File"
    ]
   },
   {
@@ -34,47 +34,11 @@
     "import pandas as pd\n",
     "\n",
     "with open('setting.txt','r') as f:\n",
-    "    setting = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['type', 'host', 'database', 'user', 'password'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    setting = json.load(f)\n",
+    "    \n",
     "sql_setting = setting['MSSQL']\n",
-    "sql_setting.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['user', 'password', 'to', 'server', 'file_path_1', 'file_path_2'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "sql_setting.keys()\n",
+    "\n",
     "mail_setting = setting['email']\n",
     "mail_setting.keys()"
    ]
@@ -88,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +74,9 @@
     "             , notebook_attached = False\n",
     "             , attached_only_error = False\n",
     "             , attached_log = False\n",
-    "             , log_sql = None)"
+    "             , log_sql = None\n",
+    "             , line_sending = None\n",
+    "             , line_subject = 'Untitled')"
    ]
   },
   {
@@ -127,7 +93,9 @@
     "- **notebook_attached :** Attached notebook in email or not (True/False)<br>\n",
     "- **attached_only_error :** Only Attached Error Notebook in email or not (True/False)<br>\n",
     "- **attached_log :** Attached Result as csv file in email or not (True/False)<br>\n",
-    "- **log_sql :** SQL config\n",
+    "- **log_sql :** SQL config<br>\n",
+    "- **line_sending :** lazy_LINE class in py_topping.general_use if you want to send LINE message<br>\n",
+    "- **line_subject :** Subject when send LINE message\n",
     "\n",
     "**Return :** Pandas DataFrame of Run Result"
    ]
@@ -704,11 +672,113 @@
     "             , log_sql = sql_dict)\n",
     "sql_dict['da_tran_SQL'].read('test_pipeline')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Send Line message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3292439b5e594e81afb74b95499d3696",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Executing:   0%|          | 0/1 [00:00<?, ?cell/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start</th>\n",
+       "      <th>script</th>\n",
+       "      <th>notebook_out</th>\n",
+       "      <th>run_result</th>\n",
+       "      <th>end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-12-05 15:17:55</td>\n",
+       "      <td>SCRIPT.ipynb</td>\n",
+       "      <td>/2021_12_05_15_17_SCRIPT.ipynb</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2021-12-05 15:18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-12-05 15:18:00</td>\n",
+       "      <td>SCRIPT.py</td>\n",
+       "      <td>None</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2021-12-05 15:18:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 start        script                    notebook_out  \\\n",
+       "0  2021-12-05 15:17:55  SCRIPT.ipynb  /2021_12_05_15_17_SCRIPT.ipynb   \n",
+       "1  2021-12-05 15:18:00     SCRIPT.py                            None   \n",
+       "\n",
+       "  run_result                  end  \n",
+       "0         OK  2021-12-05 15:18:00  \n",
+       "1         OK  2021-12-05 15:18:00  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from py_topping.general_use import lazy_LINE\n",
+    "\n",
+    "# Init lazy_LINE class\n",
+    "line = lazy_LINE('{Your Line Notify Token}')\n",
+    "\n",
+    "# Run\n",
+    "run_pipeline(script_list = ['SCRIPT.ipynb', 'SCRIPT.py']\n",
+    "             , line_sending = line\n",
+    "             , line_subject = 'test krub')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -722,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
