Add new note and sample

--- a/samples/run_pipeline.ipynb
+++ b/samples/run_pipeline.ipynb
@@ -28,10 +28,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['user', 'password', 'to', 'server', 'file_path_1', 'file_path_2'])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os, re,json\n",
     "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "with open('setting.txt','r') as f:\n",
     "    setting = json.load(f)\n",
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +102,7 @@
     "- **out_folder :** Folder to contain .ipynb output files<br>\n",
     "- **email_dict :**  Email config<br>\n",
     "- **sending :** Send Run Result in Email or Not (True/False)<br>\n",
-    "- **only_error :** Only send email when there're error in result (True/False)<br>\n",
+    "- **only_error :** Only send email/line when there're error in result (True/False)<br>\n",
     "- **notebook_attached :** Attached notebook in email or not (True/False)<br>\n",
     "- **attached_only_error :** Only Attached Error Notebook in email or not (True/False)<br>\n",
     "- **attached_log :** Attached Result as csv file in email or not (True/False)<br>\n",
@@ -109,29 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddb4914ba91c479688879d84928fcfb6",
+       "model_id": "2fde3246e9564c93a489ea04e71575f5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Executing', max=1.0, style=ProgressStyle(description_widt…"
+       "Executing:   0%|          | 0/1 [00:00<?, ?cell/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     },
     {
      "data": {
@@ -164,19 +170,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-02-14 14:29:12</td>\n",
+       "      <td>2021-12-22 09:54:43</td>\n",
        "      <td>SCRIPT.ipynb</td>\n",
-       "      <td>/2021_02_14_14_29_SCRIPT.ipynb</td>\n",
+       "      <td>/2021_12_22_09_54_SCRIPT.ipynb</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2021-02-14 14:29:15</td>\n",
+       "      <td>2021-12-22 09:54:47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-02-14 14:29:15</td>\n",
+       "      <td>2021-12-22 09:54:47</td>\n",
        "      <td>SCRIPT.py</td>\n",
        "      <td>None</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2021-02-14 14:29:16</td>\n",
+       "      <td>2021-12-22 09:54:47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -184,15 +190,15 @@
       ],
       "text/plain": [
        "                 start        script                    notebook_out  \\\n",
-       "0  2021-02-14 14:29:12  SCRIPT.ipynb  /2021_02_14_14_29_SCRIPT.ipynb   \n",
-       "1  2021-02-14 14:29:15     SCRIPT.py                            None   \n",
+       "0  2021-12-22 09:54:43  SCRIPT.ipynb  /2021_12_22_09_54_SCRIPT.ipynb   \n",
+       "1  2021-12-22 09:54:47     SCRIPT.py                            None   \n",
        "\n",
        "  run_result                  end  \n",
-       "0         OK  2021-02-14 14:29:15  \n",
-       "1         OK  2021-02-14 14:29:16  "
+       "0         OK  2021-12-22 09:54:47  \n",
+       "1         OK  2021-12-22 09:54:47  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,18 +683,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# New in 0.3.10\n",
     "# Send Line message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3292439b5e594e81afb74b95499d3696",
+       "model_id": "a261d8ea6d42421d8c4100cf8ca2aa43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -730,19 +737,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-12-05 15:17:55</td>\n",
+       "      <td>2021-12-05 15:32:11</td>\n",
        "      <td>SCRIPT.ipynb</td>\n",
-       "      <td>/2021_12_05_15_17_SCRIPT.ipynb</td>\n",
+       "      <td>/2021_12_05_15_32_SCRIPT.ipynb</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2021-12-05 15:18:00</td>\n",
+       "      <td>2021-12-05 15:32:13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-12-05 15:18:00</td>\n",
+       "      <td>2021-12-05 15:32:13</td>\n",
        "      <td>SCRIPT.py</td>\n",
        "      <td>None</td>\n",
        "      <td>OK</td>\n",
-       "      <td>2021-12-05 15:18:00</td>\n",
+       "      <td>2021-12-05 15:32:13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -750,15 +757,15 @@
       ],
       "text/plain": [
        "                 start        script                    notebook_out  \\\n",
-       "0  2021-12-05 15:17:55  SCRIPT.ipynb  /2021_12_05_15_17_SCRIPT.ipynb   \n",
-       "1  2021-12-05 15:18:00     SCRIPT.py                            None   \n",
+       "0  2021-12-05 15:32:11  SCRIPT.ipynb  /2021_12_05_15_32_SCRIPT.ipynb   \n",
+       "1  2021-12-05 15:32:13     SCRIPT.py                            None   \n",
        "\n",
        "  run_result                  end  \n",
-       "0         OK  2021-12-05 15:18:00  \n",
-       "1         OK  2021-12-05 15:18:00  "
+       "0         OK  2021-12-05 15:32:13  \n",
+       "1         OK  2021-12-05 15:32:13  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +774,7 @@
     "from py_topping.general_use import lazy_LINE\n",
     "\n",
     "# Init lazy_LINE class\n",
-    "line = lazy_LINE('{Your Line Notify Token}')\n",
+    "line = lazy_LINE('YOUR LINE NOTI')\n",
     "\n",
     "# Run\n",
     "run_pipeline(script_list = ['SCRIPT.ipynb', 'SCRIPT.py']\n",
