--- a/samples/sharepoint.ipynb
+++ b/samples/sharepoint.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For my Safety reason, load setting file"
+    "# Load Required Libraries\n",
+    "\n",
+    " - ```pip install Office365-REST-Python-Client``` \n",
+    "\n",
+    "# Article about this notebook\n",
+    "\n",
+    " - https://faun.pub/quick-etl-with-python-part-1-download-files-from-sharepoint-online-40bf23711662\n",
+    "\n",
+    "# Load Token from Text File"
    ]
   },
   {
@@ -587,7 +595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -601,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
