--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -32,7 +32,10 @@
     " - ```pip install psycopg2```<br>\n",
     " \n",
     "**SQLite Driver** <br>\n",
-    " - I'm already forgot =_=\""
+    " - I'm already forgot =_=\"\n",
+    " \n",
+    "# Article about this notebook\n",
+    " - https://faun.pub/quick-etl-with-python-part-2-modify-and-upsert-table-into-sql-a192a6b81ad4"
    ]
   },
   {
@@ -3015,7 +3018,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3029,7 +3032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
