--- a/samples/lazy_LINE.ipynb
+++ b/samples/lazy_LINE.ipynb
@@ -5,6 +5,9 @@
    "id": "elect-ocean",
    "metadata": {},
    "source": [
+    "# Article about this notebook\n",
+    " - https://faun.pub/send-message-in-line-with-python-ff5147ca0a2d\n",
+    "\n",
     "Line Notify allow you to send message to Line group with API<br>\n",
     "All you need is to generate group's token from https://notify-bot.line.me/en"
    ]
@@ -199,7 +202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
