--- a/samples/data_preparation.ipynb
+++ b/samples/data_preparation.ipynb
@@ -1093,11 +1093,226 @@
    "source": [
     "Decode will automatic decode \"3\" that not in train set as \"unknown\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b6a0bfb",
+   "metadata": {},
+   "source": [
+    "# Auto Explain Decision Tree Logic\n",
+    "\n",
+    "# Article about this function\n",
+    " - https://faun.pub/explain-decision-trees-logic-d1b06369bf3d\n",
+    " \n",
+    "## Create Simple model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "20e10357",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=4, random_state=0)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "iris = load_iris()\n",
+    "col_name = [i.replace(' ','_') for i in iris['feature_names']]\n",
+    "X = pd.DataFrame(iris['data'], columns = col_name)\n",
+    "y = iris['target']\n",
+    "model = DecisionTreeClassifier(random_state=0, max_depth=4)\n",
+    "model = model.fit(X, y)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6775c77",
+   "metadata": {},
+   "source": [
+    "## Import Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9932e711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from py_topping.data_preparation import lazy_tree_logic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcea4704",
+   "metadata": {},
+   "source": [
+    "## Create explainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d41e96e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_explain = lazy_tree_logic(model, list(X.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcfb938f",
+   "metadata": {},
+   "source": [
+    "## Explain the logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2340ec72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length_(cm)</th>\n",
+       "      <th>sepal_width_(cm)</th>\n",
+       "      <th>petal_length_(cm)</th>\n",
+       "      <th>petal_width_(cm)</th>\n",
+       "      <th>reason</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>[[petal_width_(cm), &lt;=, 0.8000], class: 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>[[petal_width_(cm), &lt;=, 0.8000], class: 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>[[petal_width_(cm), &lt;=, 0.8000], class: 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>[[petal_width_(cm), &lt;=, 0.8000], class: 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>[[petal_width_(cm), &lt;=, 0.8000], class: 0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal_length_(cm)  sepal_width_(cm)  petal_length_(cm)  petal_width_(cm)  \\\n",
+       "0                5.1               3.5                1.4               0.2   \n",
+       "1                4.9               3.0                1.4               0.2   \n",
+       "2                4.7               3.2                1.3               0.2   \n",
+       "3                4.6               3.1                1.5               0.2   \n",
+       "4                5.0               3.6                1.4               0.2   \n",
+       "\n",
+       "                                       reason  \n",
+       "0  [[petal_width_(cm), <=, 0.8000], class: 0]  \n",
+       "1  [[petal_width_(cm), <=, 0.8000], class: 0]  \n",
+       "2  [[petal_width_(cm), <=, 0.8000], class: 0]  \n",
+       "3  [[petal_width_(cm), <=, 0.8000], class: 0]  \n",
+       "4  [[petal_width_(cm), <=, 0.8000], class: 0]  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['reason'] = X.apply(tree_explain.explain, axis =1)\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "93e1a5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['petal_width_(cm)', '<=', '0.8000'], 'class: 0']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.loc[0,'reason']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1111,7 +1326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
