add create_folder in download_folder's sample

--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -75,7 +75,8 @@
    "outputs": [],
    "source": [
     "gcs.download_folder(bucket_folder = '{Name of Folder you want to download}'\n",
-    "                    , local_folder = '{Location + Folder you want to save in your PC}')"
+    "                    , local_folder = '{Location + Folder you want to save in your PC}'\n",
+    "                    , create_folder = False) # <= If true, will create folder if not exists"
    ]
   },
   {
@@ -134,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
