lazy_LINE >> Add timeout and correct message

--- a/samples/lazy_LINE.ipynb
+++ b/samples/lazy_LINE.ipynb
@@ -37,7 +37,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line = lazy_LINE(token = 'YOUR TOKEN')"
+    "line = lazy_LINE(token = 'YOUR TOKEN', timeout = 60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdb9709a",
+   "metadata": {},
+   "source": [
+    "### List of Parameter\n",
+    " - **token** : Your LINE token (String)\n",
+    " - **timeout** : Default timeout of LINE sending request in second(s) (int), default 60"
    ]
   },
   {
@@ -83,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line.send(message, notification = True , stickerPackageId = '', stickerId = '', picture = '')"
+    "line.send(message, notification = True , stickerPackageId = '', stickerId = '', picture = '', timeout = None)"
    ]
   },
   {
@@ -94,9 +104,10 @@
     "### List of Parameter\n",
     " - **message** : Message to Send in Line (String)\n",
     " - **notification** : To Notify or Not (Boolean)\n",
-    " - **stickerPackageId** : List of Columns' name for numeric feature (String)\n",
-    " - **stickerId**  : List of Columns' name for categorical feature (String)\n",
-    " - **picture** : List of Neural Network Node and Layer (String)\n",
+    " - **stickerPackageId** : ID of sticker's package that you want to send (String)\n",
+    " - **stickerId**  : ID of sticker that you want to send (String)\n",
+    " - **picture** : Path to your picture (String)\n",
+    " - **timeout** : Specific timeout in second(s) (int), if None >> use default timeout from class \n",
     "\n",
     "**Return** : requests class (will Send LINE Message to LINE Group)"
    ]
@@ -117,6 +128,25 @@
    "outputs": [],
    "source": [
     "line.send('Simple Message')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea7176a",
+   "metadata": {},
+   "source": [
+    "## Sample of Send Message with 5 seconds timeout\n",
+    "Added in 0.3.12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f19784b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line.send('Simple Message' , timeout = 5)"
    ]
   },
   {
@@ -196,7 +226,8 @@
     "          , notification = False \n",
     "          , stickerPackageId = 'PackageID for Sticker List'\n",
     "          , stickerId = 'StickerId for Sticker List'\n",
-    "          , picture = 'Path to your picture')"
+    "          , picture = 'Path to your picture'\n",
+    "          , timeout = 5)"
    ]
   }
  ],
